change the properties to use the proper native format

--- a/src/main/resources/org/broadleafcommerce/openadmin/client/OpenAdminMessages_sv.properties
+++ b/src/main/resources/org/broadleafcommerce/openadmin/client/OpenAdminMessages_sv.properties
@@ -1,78 +1,78 @@
 contactingServerTitle=kontaktande server
-currentUser=aktuell Användare
+currentUser=aktuell Anv√§ndare
 logout=utloggning
-emptyMessage=Ange villkor Field sökningen ovan för att befolka Grid
-userManagementMainTitle=Användarhantering
-userListTitle=användare
-userDetailsTitle=användarinformation
-userRolesTitle=användarroller
-userPermissionsTitle=användarbehörigheter
+emptyMessage=Ange villkor Field s√∂kningen ovan f√∂r att befolka Grid
+userManagementMainTitle=Anv√§ndarhantering
+userListTitle=anv√§ndare
+userDetailsTitle=anv√§ndarinformation
+userRolesTitle=anv√§ndarroller
+userPermissionsTitle=anv√§ndarbeh√∂righeter
 newAdminUserTitle=Skapa ny Admin User
 clonePromotionHelp=Duplicera Denna kampanj
-orderItemCombineLabel=Kan detta Beställningsvara rabatten kombineras med andra rabatter beställa objekt?
-confirmResetPassword=Är du säker på att du vill återställa kundens lösenord?
-resetPasswordSuccessful=Kunden återställning av lösenord lyckades.
-blcProjectPage=Lövträd handelsprojekt sidan
-userAdminModuleTitle=användaradministration
+orderItemCombineLabel=Kan detta Best√§llningsvara rabatten kombineras med andra rabatter best√§lla objekt?
+confirmResetPassword=√Ñr du s√§ker p√• att du vill √•terst√§lla kundens l√∂senord?
+resetPasswordSuccessful=Kunden √•terst√§llning av l√∂senord lyckades.
+blcProjectPage=L√∂vtr√§d handelsprojekt sidan
+userAdminModuleTitle=anv√§ndaradministration
 roleManagementMainTitle=rollhantering
 rolesTitle =  roll
 roleListTitle =  roller
 roleDetailsTitle =  Role Detaljer
 roleName=roll
-permissionListTitle =  behörigheter
-permissionDetailsTitle =  tillstånd Detaljer
-permissionManagementMainTitle=tillstånd hantering
+permissionListTitle =  beh√∂righeter
+permissionDetailsTitle =  tillst√•nd Detaljer
+permissionManagementMainTitle=tillst√•nd hantering
 newRoleTitle =  Skapa ny roll
-newPermissionTitle =  Skapa nya tillstånd
-newItemTitle=Lägg till nytt objekt
-selectPolymorphicType=Välj du vill lägga
+newPermissionTitle =  Skapa nya tillst√•nd
+newItemTitle=L√§gg till nytt objekt
+selectPolymorphicType=V√§lj du vill l√§gga
 baseLocale=locale
-baseAdminUser=Admin Användare
+baseAdminUser=Admin Anv√§ndare
 baseAdminRole=Admin Role
-baseAdminPermission=Admin Tillstånd
-searchForPermission=Sök efter tillstånd
+baseAdminPermission=Admin Tillst√•nd
+searchForPermission=S√∂k efter tillst√•nd
 openAdminVersion=$ {project.version}
 buildDate=$ {openAdminBuildDate}
 clientBuildDate=$ {clientBuildDate}
 
 #item# objektet
-addTitle=tillsätt
-removeTitle=avlägsna
+addTitle=tills√§tt
+removeTitle=avl√§gsna
 saveTitle=Spara
-restoreTitle=Återställ
-restoreTooltip=Återställer formen till det senaste spara punkten
+restoreTitle=√Öterst√§ll
+restoreTooltip=√Öterst√§ller formen till det senaste spara punkten
 
-#sandbox operations# sandlåderegler operationer
-promoteTitle=främja
-promoteTooltip=Främja utvalda förändringar.
+#sandbox operations# sandl√•deregler operationer
+promoteTitle=fr√§mja
+promoteTooltip=Fr√§mja utvalda f√∂r√§ndringar.
 
-promoteAllTitle=främja alla
-promoteAllTooltip=Främja alla objekt från denna sandlåda.
+promoteAllTitle=fr√§mja alla
+promoteAllTooltip=Fr√§mja alla objekt fr√•n denna sandl√•da.
 
-revertTitle=återgå
-revertTooltip=Återställ markerade ändringar.
+revertTitle=√•terg√•
+revertTooltip=√Öterst√§ll markerade √§ndringar.
 
-revertAllTitle=återgå Alla
-revertAllTooltip=Återställa alla objekt från denna sandlåda.
+revertAllTitle=√•terg√• Alla
+revertAllTooltip=√Öterst√§lla alla objekt fr√•n denna sandl√•da.
 
 rejectTitle=avvisa
-rejectTooltip=Avvisa markerade ändringarna och återgå till användarens sandlåda.
+rejectTooltip=Avvisa markerade √§ndringarna och √•terg√• till anv√§ndarens sandl√•da.
 
 rejectAllTitle=avvisa alla
-rejectAllTooltip=Avvisa alla ändringar och återgå till användarens sandlåda.
+rejectAllTooltip=Avvisa alla √§ndringar och √•terg√• till anv√§ndarens sandl√•da.
 
-reclaimTitle=återvinna
-reclaimTooltip=Reclaim utvalda ändringar tillbaka till din sandlåda.
+reclaimTitle=√•tervinna
+reclaimTooltip=Reclaim utvalda √§ndringar tillbaka till din sandl√•da.
 
-reclaimAllTitle=återvinna alla
-reclaimAllTooltip=Reclaim alla objekt tillbaka till din sandlåda.
+reclaimAllTitle=√•tervinna alla
+reclaimAllTooltip=Reclaim alla objekt tillbaka till din sandl√•da.
 
-unlockTitle=Lås upp
-unlockTooltip=Lås upp valda objekt. Detta kommer att återställa alla ändringar av dessa föremål tillverkade av den inlämnande användaren.
+unlockTitle=L√•s upp
+unlockTooltip=L√•s upp valda objekt. Detta kommer att √•terst√§lla alla √§ndringar av dessa f√∂rem√•l tillverkade av den inl√§mnande anv√§ndaren.
 
-unlockAllTitle=Lås upp alla
-unlockAllTooltip=Lås upp alla objekt från denna sandlåda. Detta kommer att återställa alla ändringar av dessa föremål tillverkade av den inlämnande användaren.
+unlockAllTitle=L√•s upp alla
+unlockAllTooltip=L√•s upp alla objekt fr√•n denna sandl√•da. Detta kommer att √•terst√§lla alla √§ndringar av dessa f√∂rem√•l tillverkade av den inl√§mnande anv√§ndaren.
 
-previewTitle=Förhandsgranska
+previewTitle=F√∂rhandsgranska
 refreshTitle=Uppdatera
-viewFullSize=Visa fullständig storlek
+viewFullSize=Visa fullst√§ndig storlek
