demonstrative UI for multi code generation in the promotion screen of the admin

--- a/src/main/resources/org/broadleafcommerce/openadmin/client/GeneratedMessages_sv.properties
+++ b/src/main/resources/org/broadleafcommerce/openadmin/client/GeneratedMessages_sv.properties
@@ -331,3 +331,4 @@ PhoneImpl_Default_Phone=Standard Phone
 PhoneImpl_Active_Phone=Aktiv Phone
 StateImpl_baseState=baseState
 StateImpl_State=Tillstånd
+ImageStaticAssetImpl_Image_Details=bildinformation
