--- a/src/main/resources/org/broadleafcommerce/openadmin/client/OpenAdminMessages_sv.properties
+++ b/src/main/resources/org/broadleafcommerce/openadmin/client/OpenAdminMessages_sv.properties
@@ -76,3 +76,6 @@ unlockAllTooltip=Lås upp alla objekt från denna sandlåda. Detta kommer att å
 previewTitle=Förhandsgranska
 refreshTitle=Uppdatera
 viewFullSize=Visa fullständig storlek
+
+ok=Ok
+cancel=Avbryt
